--- a/자료.md
+++ b/자료.md
@@ -1,1 +1,26 @@
-# Computer-Science
+# 계절학기 프로젝트 정리
+- DevOps 개발환경
+- Vue vs React
+- 
+
+#
+
+## DevOps 개발환경
+- development(개발) + operation(운영) -> 개발담당자와 운영담당자가 연계하여 협력하는 개발 방법론
+- 애자일 소프트웨어(Agile software) 개발, 지속적인 통합(Continuous integration)과 관련
+
+```
+DevOps 목적 : 개발과 운영 간 프로세스를 자동화하여 소프트웨어를 보다 빠르고 안정적으로 빌드, 테스트, 릴리즈 할 수 있도록 하는 것
+```
+
+![image](https://m.blog.naver.com/seulgi77/221784896258?view=img_2)
+
+```
+DevOps의 이점
+1) 속도 : 작업 속도 빨라지면서 시장 변화에 잘 적응, 효즐적인 비즈니스 성과 창출
+2) 신속한 제공 : 새로운 기능의 릴리스와 버그 수정 속도가 빨라져 고객 요구에 빠른 대응 가능
+3) 안정성 : 업데이트와 인프라 변경의 품질 보장, 지속적 통합 및 전달 방식을 통해 안정적인 서비스를 고객에게 제공 가능
+4) 확장 가능 : 복잡하거나 변화하는 시스템을 효율적으로 관리 가능
+5) 협업 강화 : 개발자와 운영팀 간 긴밀한 협업 가능 -> 비효율 ↓ , 시간 절약
+```
+
