--- a/자료.md
+++ b/자료.md
@@ -13,7 +13,7 @@
 DevOps 목적 : 개발과 운영 간 프로세스를 자동화하여 소프트웨어를 보다 빠르고 안정적으로 빌드, 테스트, 릴리즈 할 수 있도록 하는 것
 ```
 
-![image](https://m.blog.naver.com/seulgi77/221784896258?view=img_2)
+![image](https://mblogthumb-phinf.pstatic.net/MjAxOTA0MjJfNDkg/MDAxNTU1OTE5MTQxNTYz.x27cIz_skLfoLu6fmpaa8WgOATYpR2kreJ584oq4jtwg.7eraCTdUja3mZ2ufs_yWYGiOIkZ6Er0NeaWwJWU253Eg.PNG.acornedu/%EC%9D%B4%EB%AF%B8%EC%A7%802.png?type=w800)
 
 ```
 DevOps의 이점
