--- a/자료.md
+++ b/자료.md
@@ -7,7 +7,7 @@
 
 ## DevOps 개발환경
 - development(개발) + operation(운영) -> 개발담당자와 운영담당자가 연계하여 협력하는 개발 방법론
-- 애자일 소프트웨어(Agile software) 개발, 지속적인 통합(Continuous integration)과 관련
+- 애자일 소프트웨어(Agile software) 개발, CI/CD 와 관련
 
 ```
 DevOps 목적 : 개발과 운영 간 프로세스를 자동화하여 소프트웨어를 보다 빠르고 안정적으로 빌드, 테스트, 릴리즈 할 수 있도록 하는 것
@@ -24,3 +24,12 @@ DevOps의 이점
 5) 협업 강화 : 개발자와 운영팀 간 긴밀한 협업 가능 -> 비효율 ↓ , 시간 절약
 ```
 
+#
+
+## Vue vs React
+- 프론트엔드 라이브러리 3대장 : Angular, React, Vue
+- 자바반 Vue 공부, 현업 React ↑
+
+### Vue
+![image](https://webisfree.com/static/uploads/2018/4314_vuejs01.jpg)
+![image](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSptlHZz_CBD7uFYB9GgBxSA1cSoXJUuvCOGg&usqp=CAU)
