--- a/자료.md
+++ b/자료.md
@@ -30,6 +30,30 @@ DevOps의 이점
 - 프론트엔드 라이브러리 3대장 : Angular, React, Vue
 - 자바반 Vue 공부, 현업 React ↑
 
-### Vue
 ![image](https://webisfree.com/static/uploads/2018/4314_vuejs01.jpg)
 ![image](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSptlHZz_CBD7uFYB9GgBxSA1cSoXJUuvCOGg&usqp=CAU)
+
+```
+프레임워크 : 개발 생산성을 높이기 위해 일정한 틀과 규칙에 따라 개발하도록 미리 구조를 규격화하여 정의해 놓은 도구
+
+라이브러리 : 자주 사용되는 기능들을 모아 재사용할 수 있도록 정리된 모음집
+```
+
+#### 장점
+- Vue
+```
+1) Template과 Render Function 모두 사용할 수 있는 옵션
+2) 간편한 Syntax와 프로젝트 설정
+3) 빠른 렌덜이과 더 적은 용량
+```
+- React
+```
+1) 큰 규모에서더 빛을 발하고 테스팅 수월
+2) Web과 Native 앱 개발에 모두 사용 가능
+3) 더 큰 개발자 생태계에서 오는 많은 레퍼런스와 도구들
+```
+
+```
+왜 Vue를 사용하여 프로젝틀를 진행했을까요??
+
+```
