--- a/자료.md
+++ b/자료.md
@@ -44,7 +44,7 @@ DevOps의 이점
 ```
 1) Template과 Render Function 모두 사용할 수 있는 옵션
 2) 간편한 Syntax와 프로젝트 설정
-3) 빠른 렌덜이과 더 적은 용량
+3) 빠른 렌더링과 더 적은 용량
 ```
 - React
 ```
@@ -54,6 +54,11 @@ DevOps의 이점
 ```
 
 ```
-왜 Vue를 사용하여 프로젝틀를 진행했을까요??
+Q. 왜 Vue를 사용하여 프로젝트를 진행했을까요??
 
+  -> 싸피 과정에서 Vue를 교육, 쉬워서 Vue로 프로젝트 진행 -> 기대 없이 입/퇴실 열심히..
+
+  1. 쉽다 -> 
+  2. 코드 짜는 법 정해져 있음 -> 협업 시 코딩 스타일 맞추는 시간 ↓
+  3. HTML 렌더링 시간 빠름 -> 동적으로 화면에 보여지는 기능들을 많이 추가한 프로젝트여서 조금이나마 더 빠른 Vue!
 ```
