--- a/자료.md
+++ b/자료.md
@@ -1,7 +1,7 @@
 # 계절학기 프로젝트 정리
 1. DevOps 개발환경
 2. Vue vs React
-3.
+3. Rest API 
 
 #
 
@@ -56,9 +56,50 @@ DevOps의 이점
 ```
 Q. 왜 Vue를 사용하여 프로젝트를 진행했을까요??
 
-  -> 싸피 과정에서 Vue를 교육, 쉬워서 Vue로 프로젝트 진행 -> 기대 없이 입/퇴실 열심히..
+  -> 싸피 과정에서 Vue를 교육, 쉬워서 Vue로 프로젝트 진행 -> 입/퇴실 열심히..
 
   1. 쉽다 -> 
   2. 코드 짜는 법 정해져 있음 -> 협업 시 코딩 스타일 맞추는 시간 ↓
   3. HTML 렌더링 시간 빠름 -> 동적으로 화면에 보여지는 기능들을 많이 추가한 프로젝트여서 조금이나마 더 빠른 Vue!
 ```
+
+## REST API
+- 자원의 표현을 통해 상태(정보)를 주고 받는 모든 것을 의미
+- URI를 통해서 자원을 명시하고, HTTP Method를 통해 동작(CRUD)을 처리
+
+- REST의 요소
+
+  - Method
+
+    | Method | 의미   | Idempotent |
+    | ------ | ------ | ---------- |
+    | POST   | Create | No         |
+    | GET    | Select | Yes        |
+    | PUT    | Update | Yes        |
+    | DELETE | Delete | Yes        |
+
+<br>
+
+  - Resource
+
+    - http://myweb/users와 같은 URI
+    - 모든 것을 Resource (명사)로 표현하고, 세부 Resource에는 id를 붙임
+
+    <br>
+
+  - Message
+
+    - 메시지 포맷이 존재
+
+      : JSON, XML 과 같은 형태가 있음 (최근에는 JSON 을 씀)
+
+      ```text
+      HTTP POST, http://myweb/users/
+      {
+      	"users" : {
+      		"name" : "terry"
+      	}
+      }
+      ```
+
+    <br>
