--- a/발표자료.md
+++ b/발표자료.md
@@ -48,7 +48,7 @@ DevOps의 이점
 ```
 - React
 ```
-1) 큰 규모에서더 빛을 발하고 테스팅 수월
+1) 큰 규모에서 더 빛을 발하고 테스팅 수월
 2) Web과 Native 앱 개발에 모두 사용 가능
 3) 더 큰 개발자 생태계에서 오는 많은 레퍼런스와 도구들
 ```
@@ -56,9 +56,9 @@ DevOps의 이점
 ```
 Q. 왜 Vue를 사용하여 프로젝트를 진행했을까요??
 
-  -> 싸피 과정에서 Vue를 교육, 쉬워서 Vue로 프로젝트 진행 -> 입/퇴실 열심히..
+  -> 싸피 과정에서 Vue를 교육 -> 입/퇴실 열심히..
 
-  1. 쉽다 -> 
+  1. 쉽다 -> 진입장벽이 낮음, 같은 기능 구현 더 쉽게 할 수 있으면 당연히
   2. 코드 짜는 법 정해져 있음 -> 협업 시 코딩 스타일 맞추는 시간 ↓
   3. HTML 렌더링 시간 빠름 -> 동적으로 화면에 보여지는 기능들을 많이 추가한 프로젝트여서 조금이나마 더 빠른 Vue!
 ```
